# gameboy-emulator

./: .gitignore  .gitmodules  .oxlintrc.json  Cargo.toml  README.md  biome.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  renovate.json  rust-toolchain.toml
.github/workflows/: ci.yml
app/gameboy/: .eslintrc.json  genicons.mjs  index.html  package.json  pnpm-lock.yaml  postcss.config.js  prettier.config.cjs  tsconfig.json  uno.config.ts  vite.config.ts
app/gameboy/src/: App-legacy.css.ts  App-legacy.tsx  App.css.ts  App.tsx  audio-worklet.js  gameboy-worker-bridge.ts  gameboy-worker-supervisor.ts  gameboy-worker.ts  gameboy-workers-supervisor.ts  gameboy.ts  gamepad.ts  index.css  index.html  main.tsx
app/gameboy/src/audio-worklet/: gameboy-audio-processor.js
app/gameboy/src/components/: AbButton.css.ts  AbButton.tsx  DirectionButton.css.ts  DirectionButton.tsx  FnButton.css.ts  FnButton.tsx  Screen.css.ts  Screen.tsx
app/gameboy/src/components/GameList/: GameList.css.ts  GameList.tsx  Item.tsx
app/gameboy/src/components/Icons/: index.tsx
app/gameboy/src/components/NetworkStatus/: NetworkStatus.tsx
app/gameboy/src/components/OperationBar/: Item.tsx  OperationBar.css.ts  OperationBar.tsx  index.ts
app/gameboy/src/components/Snapshots/: Snapshots.css.ts  Snapshots.tsx  SnapshotsDrawer.tsx  index.ts
app/gameboy/src/components/avatar/: Avatar.css.ts  Avatar.tsx
app/gameboy/src/components/button/: Button.css.ts  Button.tsx
app/gameboy/src/components/confirm-modal/: ConfirmModal.tsx  index.ts
app/gameboy/src/components/core/: AbButton.css.ts  AbButton.tsx  DirectionButton.tsx  FnButton.css.ts  FnButton.tsx  Screen.tsx  Spin.tsx
app/gameboy/src/components/exit-game-modal/: ExitGameModal.tsx
app/gameboy/src/components/export/: Export.tsx  ExportModal.tsx  Popover.module.css
app/gameboy/src/components/flex-box/: FlexBox.tsx
app/gameboy/src/components/game-list/: GameList.css.ts  GameList.tsx  Item.tsx
app/gameboy/src/components/home/: Home.css.ts  Home.tsx  index.ts
app/gameboy/src/fs/: index.ts  storage.ts  zip.ts
app/gameboy/src/hooks/: useFullscreen.ts  useGamepadController.ts  useKeyboardController.ts  useMount.ts  useMountState.ts  useObjectURL.ts  useRefCallback.ts
app/gameboy/src/model/: error.ts  index.ts
app/gameboy/src/storage/: indexdb.ts
app/gameboy/src/store/: actions.ts  app.ts  game.ts  index.ts  settings.ts  state.ts  utils.ts
app/gameboy/src/styles/: index.ts  vars.css.ts
app/gameboy/src/types/: index.ts
app/gameboy/src/utils/: cn.ts  index.ts
app/gb_wasm/: .gitignore  Cargo.toml  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
app/gb_wasm/src/: audio.rs  lib.rs
app/gb_wasm/web/: App.tsx  audio-worklet.js  env.ts  gameboy-worker.ts  gameboy.ts  gamepad.ts  index.html  worker.ts
crates/apu/: Cargo.toml
crates/apu/src/: blipbuf.rs  clock.rs  length_counter.rs  length_timer.rs  lib.rs  utils.rs
crates/apu/src/channel/: envelope.rs  frame_sequencer.rs  length_counter.rs  mod.rs  noise_channel.rs  period_sweep.rs  pulse_channel.rs  sweep.rs  volume_envelope.rs  wave_channel.rs
crates/blip_buf/: Cargo.toml
crates/blip_buf/src/: lib.rs
crates/cartridge/: Cargo.toml
crates/cartridge/src/: lib.rs
crates/cartridge/src/mbc/: mbc1.rs  mbc2.rs  mbc3.rs  mbc5.rs  mbc_none.rs  mod.rs  none_mbc.rs
crates/cartridge/tests/: cart_load.rs
crates/cpu_sm83/: Cargo.toml
crates/cpu_sm83/src/: cpu16.rs  instruction.rs  instructions.rs  lib.rs  proc.rs
crates/cpu_sm83/src/alu/: adc.rs  add.rs  and.rs  bit.rs  cp.rs  daa.rs  dec.rs  inc.rs  mod.rs  or.rs  res.rs  rla.rs  rlc.rs  rlca.rs  rra.rs  rrca.rs  sbc.rs  set.rs  sla.rs  sub.rs  xor.rs
crates/cpu_sm83/src/instruction/: ld.rs  mod.rs
crates/cpu_sm83/src/proc/: adc.rs  add.rs  and.rs  call.rs  cb.rs  ccf.rs  cp.rs  cpl.rs  daa.rs  dec.rs  di.rs  ei.rs  halt.rs  inc.rs  jp.rs  jr.rs  load.rs  mod.rs  or.rs  pop.rs  push.rs  ret.rs  reti.rs  rla.rs  rlca.rs  rra.rs  rrca.rs  rst.rs  sbc.rs  scf.rs  stop.rs  sub.rs  utils.rs  xor.rs
crates/gb/: Cargo.toml
crates/gb-audio-worklet/: Cargo.toml
crates/gb-audio-worklet/src/: lib.rs
crates/gb-wasm/: Cargo.toml  justfile
crates/gb-wasm/src/: audio.rs  lib.rs
crates/gb/examples/: headless.rs
crates/gb/src/: bus.rs  dma.rs  hdma.rs  hram.rs  joypad.rs  lib.rs  main.rs  misc_ram.rs  native.rs  serial.rs  timer.rs  vdma.rs  wasm.rs  wram.rs
crates/gb_apu/: Cargo.toml
crates/gb_apu/src/: lib.rs
crates/gb_apu/src/channel/: frame_sequencer.rs  length_counter.rs  noise_channel.rs  pulse_channel.rs  sweep.rs  wave_channel.rs
crates/gb_cartridge/: Cargo.toml
crates/gb_cartridge/src/: lib.rs
crates/gb_cartridge/src/mbc/: mbc1.rs  mbc2.rs  mbc3.rs  mbc5.rs  mbc_none.rs
crates/gb_cartridge/tests/: cart_load.rs
crates/gb_console_log/: Cargo.toml
crates/gb_console_log/src/: lib.rs
crates/gb_cpu_sm83/: Cargo.toml
crates/gb_cpu_sm83/src/: interrupt.rs  lib.rs
crates/gb_cpu_sm83/src/alu/: adc.rs  add.rs  cp.rs  inc.rs  mod.rs  or.rs  rl.rs  rr.rs  rrc.rs  sra.rs  srl.rs  sub.rs  swap.rs  xor.rs
crates/gb_cpu_sm83/src/inst/: adc.rs  add.rs  and.rs  bit.rs  cb.rs  cp.rs  daa.rs  dec.rs  inc.rs  mod.rs  or.rs  res.rs  rl.rs  rlc.rs  rr.rs  rrc.rs  sbc.rs  set.rs  sla.rs  sra.rs  srl.rs  sub.rs  swap.rs  xor.rs
crates/gb_cpu_sm83/src/proc/: cb.rs
crates/gb_ppu/: Cargo.toml
crates/gb_ppu/src/: config.rs  lcd.rs  lib.rs  vram.rs
crates/gb_ppu/src/palette/: mod.rs
crates/gb_shared/src/: boxed.rs  lib.rs
crates/gb_wasm/: .gitignore  Cargo.toml  x.mjs
crates/gb_wasm/src/: lib.rs
crates/io/: Cargo.toml  README.md
crates/io/src/: lib.rs
crates/ppu/: Cargo.toml
crates/ppu/src/: config.rs  corruption.rs  fps.rs  lcd.rs  lib.rs  object.rs  pixel.rs  sprite.rs  tile.rs  vram.rs
crates/ppu/src/palette/: compatibility_palettes.rs  mod.rs  monochrome.rs  polychrome.rs
crates/shared/: Cargo.toml
crates/shared/src/: bitwise.rs  boxed.rs  builder.rs  command.rs  event.rs  lib.rs
patches/: vite-plugin-svgr.patch
scripts/: genicons.mjs  package.json  pnpm-lock.yaml
(+71 files in other folders)
