[workspace]
members = [
  "crates/cpu_sm83",
  "crates/gb",
  "crates/cartridge",
  "crates/shared",
  "crates/ppu",
  "crates/apu",
  "crates/gb_wasm",
  "crates/gb_console_log",
]
resolver = "2"

[workspace.dependencies]
gb_cpu_sm83 = { path = "crates/cpu_sm83" }
gb_cartridge = { path = "crates/cartridge" }
gb_console_log = { path = "crates/gb_console_log" }
gb_ppu = { path = "crates/ppu" }
gb_apu = { path = "crates/apu" }
gb_shared = { path = "crates/shared" }
gb = { path = "crates/gb" }
log = { version = "0.4.21" }
anyhow = "1.0.82"
mockall = "0.12.1"
web-time = "1.1.0"
wasm-bindgen = "0.2.92"
bincode = "1.3.3"
serde = { version = "1.0.210", features = ["derive"] }
web-sys = { version = "0.3.69" }

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
debug = true
