[workspace]
members = [
  "crates/gb",
  "crates/gb_apu",
  "crates/gb_cartridge",
  "crates/gb_console_log",
  "crates/gb_cpu_sm83",
  "crates/gb_ppu",
  "crates/gb_shared",
  "crates/gb_wasm",
]
resolver = "2"

[workspace.dependencies]
gb = { path = "crates/gb" }
gb_apu = { path = "crates/gb_apu" }
gb_cartridge = { path = "crates/gb_cartridge" }
gb_console_log = { path = "crates/gb_console_log" }
gb_cpu_sm83 = { path = "crates/gb_cpu_sm83" }
gb_ppu = { path = "crates/gb_ppu" }
gb_shared = { path = "crates/gb_shared" }
log = { version = "0.4.27" }
anyhow = "1.0.100"
mockall = "0.12.1"
web-time = "1.1.0"
wasm-bindgen = "=0.2.100"
bincode = "1.3.3"
serde = { version = "1.0.226", features = ["derive"] }
web-sys = { version = "0.3.69" }

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
debug = true
