[package]
name = "gb_cpu_sm83"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = { workspace = true }
gb_shared = { workspace = true }

[dev-dependencies]
mockall = { workspace = true }
strum = "0.26"
strum_macros = "0.26"
