[package]
name = "gb"
version = "0.1.0"
edition = "2021"

[dependencies]
gb_apu = { workspace = true }
gb_ppu = { workspace = true }
gb_cpu_sm83 = { workspace = true }
gb_cartridge = { workspace = true }
gb_shared = { workspace = true }
log = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
mockall = { workspace = true }

# [target.'cfg(target_family = "wasm")'.lib]
[lib]
crate-type = ["cdylib"]

[target.'cfg(target_family = "wasm")'.dependencies.'wasm-bindgen']
version = "0.2"
