[package]
name = "gb"
version = "0.1.0"
edition = "2021"

[features]
default = []
debug_frame = ["gb_ppu/debug_frame"]

[dependencies]
gb_apu = { workspace = true }
gb_ppu = { workspace = true }
gb_cpu_sm83 = { workspace = true }
gb_cartridge = { workspace = true }
gb_shared = { workspace = true }
log = { workspace = true }
anyhow = { workspace = true }
web-time = { workspace = true }
serde = { workspace = true }
bincode = { workspace = true }

[dev-dependencies]
mockall = { workspace = true }
