[package]
name = "gb_cartridge"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
log = { workspace = true }
gb_shared = { workspace = true }
web-time = { workspace = true }
serde = { workspace = true }
bincode = { workspace = true }
