[package]
name = "gb_ppu"
version = "0.1.0"
edition = "2021"

[features]
default = []
debug_frame = []

[dependencies]
gb_shared = { workspace = true }
log = { workspace = true }
mockall = { workspace = true }
web-time = { workspace = true }
serde = { workspace = true }
bincode = { workspace = true }
